--- a/PrintStoreWebApp/PrintStoreWebApp/wwwroot/login.html
+++ b/PrintStoreWebApp/PrintStoreWebApp/wwwroot/login.html
@@ -43,9 +43,10 @@
                 <button type="submit" value="Send">Submit</button>
             </form>
         </div>
-        <div class="form-reponse"></div>
+        
+        <p>Test</p>
     </section>
-
+    
     <footer class="company-footer">
         <div class="footer-container">
             <div class="footer-col co1">
