further update on login

--- a/PrintStoreWebApp/PrintStoreWebApp/wwwroot/login.html
+++ b/PrintStoreWebApp/PrintStoreWebApp/wwwroot/login.html
@@ -44,7 +44,7 @@
             </form>
         </div>
         
-        <p>Test</p>
+        <p id = "form-response"></p>
     </section>
     
     <footer class="company-footer">
