--- a/PrintStoreWebApp/PrintStoreWebApp/wwwroot/cart.html
+++ b/PrintStoreWebApp/PrintStoreWebApp/wwwroot/cart.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="menu.html">Browse</a></li>
                 <li><a href="login.html">Log in</a></li>
-                <li><a href="">Sign Up</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
                 <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
