--- a/PrintStoreWebApp/PrintStoreWebApp/wwwroot/signup.html
+++ b/PrintStoreWebApp/PrintStoreWebApp/wwwroot/signup.html
@@ -20,13 +20,13 @@
             <ul>
                 <li><a href="menu.html">Browse</a></li>
                 <li><a href="login.html">Log in</a></li>
-                <li><a href="#">Sign Up</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
                 <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class = "main-signup">
+    <section id = "main-signup">
         <div class="form-wrapper">
             <header class="form-head">
                 <h2>Signup</h2>
@@ -34,14 +34,14 @@
             <form id="signin-form" method="POST">
                 <div class="fName-form">
                     <label for="text">First Name: </label>
-                    <input type = "text" name="fName" required>
+                    <input type = "text" name="fname" required>
                 </div>
                 <div class="lName-form">
                     <label for="text">Last Name: </label>
-                    <input type = "text" name="lName" required>
+                    <input type = "text" name="lname" required>
                 </div>
                 <div class="email-form">
-                    <label for="email">Email: </label>
+                    <label for="email">Email:</label>
                     <input type = "email" name="email" required>
                 </div>
                 <div class="password-form">
@@ -51,6 +51,7 @@
                 <button type="submit" value="Send">Submit</button>
             </form>
         </div>
+        <p id = "form-response"></p>
     </section>
 
     <footer class="company-footer">
