--- a/PrintStoreWebApp/PrintStoreWebApp/wwwroot/menu.html
+++ b/PrintStoreWebApp/PrintStoreWebApp/wwwroot/menu.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="icons/paintbrushicon.svg">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Cart</title>
+    <title>Browse</title>
 </head>
 <body>
     <header class="main-header">
