--- a/PrintStoreWebApp/PrintStoreWebApp/wwwroot/cart.html
+++ b/PrintStoreWebApp/PrintStoreWebApp/wwwroot/cart.html
@@ -28,6 +28,7 @@
 
     <section class = "main-cart">
         <h2>Cart<h2>
+            <button onclick="myFunction()">Test</button>
     </section>
 
     <footer class="company-footer">
@@ -70,5 +71,6 @@
             </div>
         </div>
     </footer>
+    <script src="cart.js"></script>
 </body>
 </html>
