--- a/PrintStoreWebApp/PrintStoreWebApp/wwwroot/menu.html
+++ b/PrintStoreWebApp/PrintStoreWebApp/wwwroot/menu.html
@@ -27,7 +27,15 @@
     </header>
 
     <section class = "main-menu">
-        <h2>Browse Collection<h2>
+        <header id = "browse-header">
+            <h2>Browse Collection<h2>
+                <div class="dropdown">
+                    <button onclick="myFunction()" class="dropbtn">Select Store</button>
+                    <div id="myDropdown" class="dropdown-content">
+                    </div>
+                  </div> 
+        </header>
+
         <div class="wrapper">
             <div class="card">
                 <img src="img/janrombauer-cheers.jpg" alt="brown-hawk-owl">
@@ -47,6 +55,38 @@
             </div>
             <div class="card">
                 <img src="img/tamara-menzi-tarzan.jpg" alt="brown-hawk-owl">
+                <div class="info">
+                    <h2>Art Title</h2>
+                    <p>Art print description</p>
+                    <a href="#" class="btn">Add to Cart</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/janrombauer-cheers.jpg" alt="brown-hawk-owl">
+                <div class="info">
+                    <h2>Art Title</h2>
+                    <p>Art print description</p>
+                    <a href="#" class="btn">Add to Cart</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/janrombauer-cheers.jpg" alt="brown-hawk-owl">
+                <div class="info">
+                    <h2>Art Title</h2>
+                    <p>Art print description</p>
+                    <a href="#" class="btn">Add to Cart</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/janrombauer-cheers.jpg" alt="brown-hawk-owl">
+                <div class="info">
+                    <h2>Art Title</h2>
+                    <p>Art print description</p>
+                    <a href="#" class="btn">Add to Cart</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/janrombauer-cheers.jpg" alt="brown-hawk-owl">
                 <div class="info">
                     <h2>Art Title</h2>
                     <p>Art print description</p>
@@ -97,4 +137,5 @@
         </div>
     </footer>
 </body>
+<script src="menu.js"></script>
 </html>
