--- a/PrintStoreWebApp/PrintStoreWebApp/wwwroot/cart.html
+++ b/PrintStoreWebApp/PrintStoreWebApp/wwwroot/cart.html
@@ -27,8 +27,37 @@
     </header>
 
     <section class = "main-cart">
-        <h2>Cart<h2>
-            <button onclick="myFunction()">Test</button>
+        <div class="cart-heading">
+            <h2>Cart<h2>
+            <hr>
+            <h4>Your Shopping Cart</h4>
+            <hr>
+        </div>
+        <div class="cart">
+        </div>
+
+        <div class="cart-total">
+            <div class="totals-item">
+                <label>Subtotal: </label>
+                <div class="totals-value" id = "cart-subtotal">71.97</div>
+            </div>
+            <div class="totals-item">
+                <label>Tax (7%): </label>
+                <div class="totals-value" id = "cart-tax">5.04</div>
+            </div>
+            <div class="totals-item">
+                <label>Shipping: </label>
+                <div class="totals-value" id = "cart-shipping">5.99</div>
+            </div>
+            <div class="totals-item totals-item-total">
+                <label>Total: </label>
+                <div class="totals-value" id = "cart-total">82.99</div>
+            </div>
+        </div>
+
+        <button class="checkout">Checkout</button>
+        
+
     </section>
 
     <footer class="company-footer">
