--- a/PrintStoreWebApp/PrintStoreWebApp/wwwroot/checkout.html
+++ b/PrintStoreWebApp/PrintStoreWebApp/wwwroot/checkout.html
@@ -1,8 +1,17 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dreamscape Print Shop is an art print store.">
+    <meta name= "robot" content="index,follow">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet"> 
+    <link rel="icon" href="icons/paintbrushicon.svg">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Checkout</title>
 </head>
 <body>
     <h1>Checkout</h1>
@@ -14,23 +23,29 @@
                     <div class="row">
                         <div class="col-50">
                             <h3>Billing Address</h3>
-                            <label for="fname"><i class="fa fa-user"></i> Full Name</label>
-                            <input type="text" id="fname" name="firstname" placeholder="John M. Doe">
-                            <label for="email"><i class="fa fa-envelope"></i> Email</label>
-                            <input type="text" id="email" name="email" placeholder="john@example.com">
-                            <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
-                            <input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
-                            <label for="city"><i class="fa fa-institution"></i> City</label>
-                            <input type="text" id="city" name="city" placeholder="New York">
+                            <label for="fname">First Name</label>
+                            <input type="text" id="fname" name="firstname" required>
+
+                            <label for="lname">Last Name</label>
+                            <input type="text" id="lname" name="lastname" required>
+
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" required>
+
+                            <label for="adr"></i>Address</label>
+                            <input type="text" id="adr" name="address"  required>
+
+                            <label for="city">City</label>
+                            <input type="text" id="city" name="city" required>
 
                             <div class="row">
                                 <div class="col-50">
                                     <label for="state">State</label>
-                                    <input type="text" id="state" name="state" placeholder="NY">
+                                    <input type="text" id="state" name="state" required>
                                 </div>
                                 <div class="col-50">
                                     <label for="zip">Zip</label>
-                                    <input type="text" id="zip" name="zip" placeholder="10001">
+                                    <input type="text" id="zip" name="zip" required>
                                 </div>
                             </div>
                         </div>
@@ -45,20 +60,20 @@
                                 <i class="fa fa-cc-discover" style="color:orange;"></i>
                             </div>
                             <label for="cname">Name on Card</label>
-                            <input type="text" id="cname" name="cardname" placeholder="John More Doe">
+                            <input type="text" id="cname" name="cardname" required>
                             <label for="ccnum">Credit card number</label>
-                            <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
+                            <input type="text" id="ccnum" name="cardnumber" required>
                             <label for="expmonth">Exp Month</label>
-                            <input type="text" id="expmonth" name="expmonth" placeholder="September">
+                            <input type="text" id="expmonth" name="expmonth" required>
 
                             <div class="row">
                                 <div class="col-50">
                                     <label for="expyear">Exp Year</label>
-                                    <input type="text" id="expyear" name="expyear" placeholder="2018">
+                                    <input type="text" id="expyear" name="expyear" required>
                                 </div>
                                 <div class="col-50">
                                     <label for="cvv">CVV</label>
-                                    <input type="text" id="cvv" name="cvv" placeholder="352">
+                                    <input type="text" id="cvv" name="cvv" required>
                                 </div>
                             </div>
                         </div>
@@ -76,19 +91,20 @@
             <div class="container">
                 <h4>
                     Cart
-                    <span class="price" style="color:black">
-                        <i class="fa fa-shopping-cart"></i>
-                        <b>4</b>
+                    <span class="price">
                     </span>
                 </h4>
-                <p><a href="#">Product 1</a> <span class="price">$15</span></p>
-                <p><a href="#">Product 2</a> <span class="price">$5</span></p>
-                <p><a href="#">Product 3</a> <span class="price">$8</span></p>
-                <p><a href="#">Product 4</a> <span class="price">$2</span></p>
+                <div class="checkout-items">
+                </div>
+                
                 <hr>
-                <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
+                <div class="checkout-totals">
+                    <p>Total <span class="price" id="checkout-total"><b></b></span></p>
+                </div>
+                
             </div>
         </div>
     </div>
+    <script src="checkout.js"></script>
 </body>
 </html>
