--- a/PrintStoreWebApp/PrintStoreWebApp/wwwroot/cart.html
+++ b/PrintStoreWebApp/PrintStoreWebApp/wwwroot/cart.html
@@ -18,9 +18,10 @@
         <nav>
             <h1 id ="logo"><a href="index.html">Dreamscape Print Shop</a></h1>
             <ul>
+                <li><a href="signup.html" id ="signup-btn">Sign Up</a></li>
+                <li><a href="login.html" id = "login-btn">Log in</a></li>
+                <li><a href="index.html" id ="signout-btn">Sign Out</a></li>
                 <li><a href="menu.html">Browse</a></li>
-                <li><a href="login.html">Log in</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
                 <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
