--- a/PrintStoreWebApp/PrintStoreWebApp/wwwroot/checkout.html
+++ b/PrintStoreWebApp/PrintStoreWebApp/wwwroot/checkout.html
@@ -14,26 +14,25 @@
     <title>Checkout</title>
 </head>
 <body>
-    <h1>Checkout</h1>
+    <h1 id="checkout-heading">Checkout</h1>
     <div class="row">
         <div class="col-75">
             <div class="container">
-                <form action="/action_page.php">
-
+                <form class= "checkout-form">
                     <div class="row">
                         <div class="col-50">
                             <h3>Billing Address</h3>
                             <label for="fname">First Name</label>
-                            <input type="text" id="fname" name="firstname" required>
+                            <input type="text" id="fname" name="fname" required>
 
                             <label for="lname">Last Name</label>
-                            <input type="text" id="lname" name="lastname" required>
+                            <input type="text" id="lname" name="lname" required>
 
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email" required>
+                            <label for="phone">Phone Number</label>
+                            <input type="tel" id="phone" name="phone" required  pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
 
                             <label for="adr"></i>Address</label>
-                            <input type="text" id="adr" name="address"  required>
+                            <input type="text" id="adr" name="adr"  required>
 
                             <label for="city">City</label>
                             <input type="text" id="city" name="city" required>
@@ -49,39 +48,7 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="col-50">
-                            <h3>Payment</h3>
-                            <label for="fname">Accepted Cards</label>
-                            <div class="icon-container">
-                                <i class="fa fa-cc-visa" style="color:navy;"></i>
-                                <i class="fa fa-cc-amex" style="color:blue;"></i>
-                                <i class="fa fa-cc-mastercard" style="color:red;"></i>
-                                <i class="fa fa-cc-discover" style="color:orange;"></i>
-                            </div>
-                            <label for="cname">Name on Card</label>
-                            <input type="text" id="cname" name="cardname" required>
-                            <label for="ccnum">Credit card number</label>
-                            <input type="text" id="ccnum" name="cardnumber" required>
-                            <label for="expmonth">Exp Month</label>
-                            <input type="text" id="expmonth" name="expmonth" required>
-
-                            <div class="row">
-                                <div class="col-50">
-                                    <label for="expyear">Exp Year</label>
-                                    <input type="text" id="expyear" name="expyear" required>
-                                </div>
-                                <div class="col-50">
-                                    <label for="cvv">CVV</label>
-                                    <input type="text" id="cvv" name="cvv" required>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
-                    <label>
-                        <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
-                    </label>
                     <input type="submit" value="Continue to checkout" class="btn">
                 </form>
             </div>
@@ -99,7 +66,6 @@
                 
                 <hr>
                 <div class="checkout-totals">
-                    <p>Total <span class="price" id="checkout-total"><b></b></span></p>
                 </div>
                 
             </div>
