--- a/PrintStoreWebApp/PrintStoreWebApp/wwwroot/login.html
+++ b/PrintStoreWebApp/PrintStoreWebApp/wwwroot/login.html
@@ -18,9 +18,10 @@
         <nav>
             <h1 id ="logo"><a href="index.html">Dreamscape Print Shop</a></h1>
             <ul>
+                <li><a href="signup.html" id ="signup-btn">Sign Up</a></li>
+                <li><a href="index.html" id ="signout-btn">Sign Out</a></li>
                 <li><a href="menu.html">Browse</a></li>
                 <li><a href="login.html">Log in</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
                 <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
@@ -30,6 +31,7 @@
         <div class="form-wrapper">
             <header class="form-head">
                 <h2>Log in</h2>
+                <p id = "form-response"></p>
             </header>
             <form id="login-form" method="POST">
                 <div class="email-form">
@@ -43,8 +45,6 @@
                 <button type="submit" value="Send">Submit</button>
             </form>
         </div>
-        
-        <p id = "form-response"></p>
     </section>
     
     <footer class="company-footer">
